syntax = "proto3";

option go_package = "./proto";

package greet;

service GreetService{
  rpc Greet(GreetRequest) returns (GreetResponse);
  rpc GreetManyTime(MessageList) returns (stream GreetResponse);
  rpc LongGreet(stream GreetRequest) returns (NameList);
  rpc GreetEveryone(stream GreetRequest) returns (stream GreetResponse);
}

message GreetRequest { 
  string name = 1;
}

message GreetResponse {
  string result = 1;
}

message MessageList {
  repeated string messages = 1;
}

message NameList {
  repeated string names = 1;
}